# chrome-pak-customizer

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  appveyor.bat  appveyor.yml  commandlinetoargva.h  main.c  main.h  node-chrome-pak.js  pack.bat  pak_defs.h  pak_file.c  pak_file.h  pak_file_io.c  pak_file_io.h  pak_get_file_type.c  pak_get_file_type.h  pak_header.c  pak_header.h  pak_pack.c  pak_pack.h  replace.cmd  settings.ini  test.c  unpack.bat  unpack.cmd
.github/workflows/: rust.yml
script/: ci-download.ps1  ci-download.sh  ci-run.ps1  ci-run.sh
src/: main.rs  pak_args.rs  pak_brotli.rs  pak_def.rs  pak_error.rs  pak_file.rs  pak_file_io.rs  pak_file_type.rs  pak_header.rs  pak_help.txt  pak_index.rs  pak_pack.rs  pak_unpack.rs
